Fixed: languages menu not visible on mobile devices

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,7 +98,6 @@ select[disabled] {
 
   .top-bar .tabs {
     height: 35px;
-    overflow-y: hidden;
   }
 
   .version {
